# captains-log

./: .gitignore  ARCHITECTURE.md  DESIGN.md  DEVELOPMENT-JOURNAL.md  README.md  ROADMAP.md  STYLE-GUIDE.md
app/: .npmrc  README.md  package-lock.json  package.json
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  email.rs  email_html.rs  labels.rs  lib.rs  link_enrich.rs  main.rs  notes.rs  reminders.rs  review_prep.rs  sent_log.rs  settings.rs  spellcheck.rs  storage.rs  tasks.rs
app/src/lib/: Checkbox.svelte  ConfirmDialog.svelte  DatePickerPopover.svelte  ExternalUpdateBanner.svelte  HelpButtons.svelte  Icon.svelte  InputField.svelte  LabelDetailsModal.svelte  LabelInput.svelte  LoadingOverlay.svelte  MarkdownEditor.svelte  MarkdownToolbar.svelte  Modal.svelte  PathPickerField.svelte  PointerFinger.svelte  RolloverReceipt.svelte  SaveStatus.svelte  SendToManagerButton.svelte  SpellcheckTextarea.svelte  TaskMetaChip.svelte  TaskRowActionButton.svelte  TextAreaField.svelte  WeekStripe.svelte  date-chip.ts  dirty.ts  help-content.ts  labelChip.ts  link-chip.ts  link-paste.ts  live-preview.ts  markdown-formatting.ts  markdown-links.ts  save-status.ts  theme.test.ts  theme.ts  url-paste-upgrade.ts  weekRollover.ts
app/src/lib/onboarding/: StepAboutManager.svelte  StepAboutYou.svelte  StepComplete.svelte  StepHeader.svelte  StepIntro.svelte  StepSettings.svelte  TipBubble.svelte  Wizard.svelte  WizardFrame.svelte
app/src/lib/review-prep/: PrepSelfReviewWizard.svelte
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/capture/: +page.svelte
app/src/routes/journal/: +page.svelte
app/src/routes/search/: +page.svelte
app/src/routes/settings/: +page.svelte
app/src/routes/summary/: +page.svelte
docs/: components.md  data-format.md  file-structure.md  first-run-setup.md  label-system.md  ux-flows.md
