[package]
name = "captainslog"
version = "0.1.0"
description = "Weekly work journal that makes self-reviews painless"
authors = ["Chris Carpenter"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix avoids a name collision between the binary and the library on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "captainslog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["fs", "rt", "macros", "time"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
chrono = { version = "0.4.45", features = ["serde"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# Modern macOS notification API — wraps UNUserNotificationCenter and gives us
# action buttons that render reliably (the deprecated NSUserNotification API
# auto-dismisses banners and renders buttons inconsistently on modern macOS).
# Used by reminders::fire_notification on macOS only.
mac-usernotifications = "=0.3.1"
# Kept ONLY for its `set_application` helper, which swizzles
# NSBundle.mainBundle.bundleIdentifier to return our bundle id in dev mode.
# Tauri's embed_plist injects CFBundleName/Version into the dev binary but
# NOT CFBundleIdentifier — without this swizzle, UNUserNotificationCenter's
# `check_bundle()` (and therefore request_auth/send) fails in `tauri dev`.
# We do NOT use this crate's notification-sending code; that path remains UN.
# TODO: replace with a small objc2-runtime swizzle of our own to drop the dep.
mac-notification-sys = "0.6"
# Used at startup to seed NSUserDefaults flags that enable WKWebView's
# continuous spell-checking. macOS doesn't expose a Tauri-level toggle for
# this; the flags must be set via NSUserDefaults before any web view
# initializes its editor. Both crates are already in the dep tree
# transitively via mac-usernotifications — we declare them directly so we
# can `use` them.
objc2 = "0.6"
objc2-foundation = "0.3"

[dev-dependencies]
tempfile = "3.27.0"

