[package]
name = "captainslog"
version = "0.1.0"
description = "Weekly work journal that makes self-reviews painless"
authors = ["Chris Carpenter"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix avoids a name collision between the binary and the library on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "captainslog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `process` (Phase 2.9b) lets `run_applescript` spawn `osascript -` and stream
# the AppleScript source over stdin — avoids argv length caps and keeps the
# command async so a slow Mail.app prompt doesn't block the runtime.
tokio = { version = "1.52.3", features = ["fs", "rt", "macros", "time", "process"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
chrono = { version = "0.4.45", features = ["serde"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-window-state = "2"
# Used by sent_log::hash_weekly_summary to detect whether a previously-sent
# week has been edited since it was sent. SHA-256 is overkill for tamper
# resistance but it's the boring, well-tested choice — and detection
# correctness is the whole point of the field.
sha2 = "0.10"
# URL percent-encoding for mailto: subject/body strings. We avoid hand-rolling
# the escape table because mailto: is fussy about which characters are safe
# (spaces must be %20, not +; reserved chars like '&', '?', '#', '/' must all
# be encoded inside the query component).
urlencoding = "2.1"
# RFC 2047 encoded-word support for the .eml subject header. The user-visible
# week label uses an en-dash (U+2013) and full month names, both UTF-8, but
# RFC 5322 headers are strictly ASCII — strict parsers reject UTF-8 subjects.
# We base64-wrap the subject as `=?UTF-8?B?<b64>?=` when it contains non-ASCII.
# Transitively present already (via tauri's dep tree); declared explicitly so
# `use base64::*` resolves.
base64 = "0.22"
# Markdown -> HTML for the Send-to-manager HTML email body (Phase 2.9).
# Pinned with `=` because future minor releases could change the event stream
# or default rendering shape; we want explicit upgrades, not silent drift.
# `default-features = false` drops the `simd` feature so the SIMD fast-path's
# C bindings aren't pulled in — `html` is all we need.
pulldown-cmark = { version = "=0.13", default-features = false, features = ["html"] }
# HTML sanitizer applied to the pulldown-cmark output before it ships in
# multipart/alternative email. Strips <script>, javascript: links, raw HTML
# the user might paste into the markdown, etc. Pinned for the same reason.
ammonia = "=4"
# Quoted-printable encoder for the text/plain and text/html parts of the
# multipart/alternative .eml body (Phase 2.9). Hand-rolling QP is a known
# foot-gun (soft line breaks, `=` escaping, 76-char wrap). Pinned for the
# same drift-control reason as the other Phase 2.9 deps.
quoted_printable = "=0.5"
# RFC 3986 percent-encoding for Gmail/Outlook compose URLs (Phase 2.9b).
# urlencoding (above) handles mailto: bodies, but Gmail's `view=cm` deeplink
# is finicky about which characters are escaped — we want the AsciiSet-based
# `NON_ALPHANUMERIC` set (everything except [A-Za-z0-9] escaped) so `+`,
# `&`, `?`, `#` and friends all become %xx in the query string. Pinned to
# `=2.3` to match the other Phase 2.9 deps' drift-control convention.
percent-encoding = "=2.3"
# Clipboard plugin (Phase 2.9b slice 8). Powers the "Copy to clipboard"
# button on the Preview modal — writeHtml(html, text) for the Native Mac
# Mail HTML mode (HTML + plaintext fallback for plaintext targets like
# Slack), writeText for the plaintext modes (Gmail / Outlook web compose /
# Native Mac Mail plaintext). Pinned `=2.3` to match the Phase 2.9 deps'
# drift-control convention.
tauri-plugin-clipboard-manager = "=2.3"
tauri-plugin-fs = "2.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
# Modern macOS notification API — wraps UNUserNotificationCenter and gives us
# action buttons that render reliably (the deprecated NSUserNotification API
# auto-dismisses banners and renders buttons inconsistently on modern macOS).
# Used by reminders::fire_notification on macOS only.
mac-usernotifications = "=0.3.1"
# Kept ONLY for its `set_application` helper, which swizzles
# NSBundle.mainBundle.bundleIdentifier to return our bundle id in dev mode.
# Tauri's embed_plist injects CFBundleName/Version into the dev binary but
# NOT CFBundleIdentifier — without this swizzle, UNUserNotificationCenter's
# `check_bundle()` (and therefore request_auth/send) fails in `tauri dev`.
# We do NOT use this crate's notification-sending code; that path remains UN.
# TODO: replace with a small objc2-runtime swizzle of our own to drop the dep.
mac-notification-sys = "0.6"
# Used at startup to seed NSUserDefaults flags that enable WKWebView's
# continuous spell-checking. macOS doesn't expose a Tauri-level toggle for
# this; the flags must be set via NSUserDefaults before any web view
# initializes its editor. Both crates are already in the dep tree
# transitively via mac-usernotifications — we declare them directly so we
# can `use` them.
objc2 = "0.6"
objc2-foundation = "0.3"
# AppKit bindings dropped in Phase 2.5 Step 4: WebKit's native spell-check
# paints squiggles + serves right-click suggestions on contenteditable
# surfaces (CodeMirror's editor) without our custom NSSpellChecker IPC,
# so the objc2-app-kit feature flag is no longer load-bearing. The
# NSUserDefaults seed in lib.rs (which gates WebKit's continuous
# spell-checking globally) lives in objc2-foundation, which we keep.

[dev-dependencies]
tempfile = "3.27.0"

